Fixes #3448: Webhook http log overflows out of browser borders

--- a/app/assets/stylesheets/zammad.scss
+++ b/app/assets/stylesheets/zammad.scss
@@ -234,6 +234,15 @@ ol, ul {
   cursor: not-allowed;
 }
 
+.u-overflow-wrap {
+  word-break: break-word;
+
+  @supports (overflow-wrap: anywhere) {
+    overflow-wrap: anywhere;
+    word-break: unset;
+  }
+}
+
 .zIndex-1 {
   z-index: 100;
 }
@@ -9978,6 +9987,10 @@ output {
     background: hsl(197,20%,93%);
     border-bottom: none;
     word-break: normal;
+  }
+
+  td {
+    word-break: break-all;
   }
 
   td.empty-cell {
